--- a/GymSpot/appsettings.json
+++ b/GymSpot/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-LF5EJOEF;Database=GymSpot.NET;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
